Remove mongoid.yml

--- a/config/mongoid.yml.template
+++ b/config/mongoid.yml.template
@@ -5,11 +5,11 @@ development:
     default:
       # Defines the name of the default database that Mongoid can connect to.
       # (required).
-      database: mealr_development
+      database: 
       # Provides the hosts the default session can connect to. Must be an array
       # of host:port pairs. (required)
       hosts:
-        - localhost:27017
+        - localhost:
       options:
         # Change the default write concern. (default = { w: 1 })
         # write:
@@ -55,15 +55,3 @@ development:
 
     # Ensure all times are UTC in the app side. (default: false)
     # use_utc: false
-test:
-  sessions:
-    default:
-      database: mealr_test
-      hosts:
-        - localhost:27017
-      options:
-        read: primary
-        # In the test environment we lower the retries and retry interval to
-        # low amounts for fast failures.
-        max_retries: 1
-        retry_interval: 0
